force-app/main/default/objects/Account/fields/ABHA_Number__c.field-meta.xml
<CustomField>
    <fullName>ABHA_Number__c</fullName>
    <label>ABHA Number</label>
    <length>17</length>
    <type>Text</type>
</CustomField>