force-app/main/default/objects/Account/fields/Bots_Paused_Until__c.field-meta.xml
<CustomField>
    <fullName>Bots_Paused_Until__c</fullName>
    <label>Bots Paused Until</label>
    <type>DateTime</type>
</CustomField>