force-app/main/default/objects/Account/fields/External_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Patient_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Patient ID (App)</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>