force-app/main/default/objects/Account/fields/FHIR_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>FHIR_Patient_Id__c</fullName>
    <externalId>true</externalId>
    <label>FHIR Patient ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>