force-app/main/default/objects/Account/fields/HIS_MRN__c.field-meta.xml
<CustomField>
<fullName>HIS_MRN__c</fullName>
<label>HIS MRN</label>
<type>Text</type>
<length>40</length>
<externalId>true</externalId>
<unique>true</unique>
</CustomField>