force-app/main/default/objects/Account/fields/Is_Minor__c.field-meta.xml
<CustomField>
    <fullName>Is_Minor__c</fullName>
    <label>Is Minor</label>
    <type>Checkbox</type>
    <formula>PersonBirthdate &gt; ADDMONTHS(TODAY(), -216)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>