force-app/main/default/objects/Account/fields/Normalized_Mobile__c.field-meta.xml
<CustomField>
<fullName>Normalized_Mobile__c</fullName>
<label>Normalized Mobile</label>
<type>Text</type>
<length>15</length>
<externalId>true</externalId>
</CustomField>