force-app/main/default/objects/Account/fields/Outreach_Suppressed__c.field-meta.xml
<CustomField>
<fullName>Outreach_Suppressed__c</fullName>
<label>Outreach Suppressed</label>
<type>Checkbox</type>
<defaultValue>false</defaultValue>
</CustomField>