force-app/main/default/objects/Account/fields/Partner_Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral_Code__c</fullName>
    <externalId>true</externalId>
    <label>Partner Referral Code</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>