force-app/main/default/objects/Account/fields/Patient_Status__c.field-meta.xml
<CustomField>
<fullName>Patient_Status__c</fullName>
<label>Patient Status</label>
<type>Picklist</type>
<defaultValue>Active</defaultValue>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Active</fullName>
<default>true</default>
<label>Active</label>
</value>
<value>
<fullName>Paused</fullName>
</value>
<value>
<fullName>Maintenance</fullName>
</value>
<value>
<fullName>Completed</fullName>
</value>
<value>
<fullName>Churned</fullName>
</value>
<value>
<fullName>Refunded</fullName>
</value>
<value>
<fullName>Inactive</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>