force-app/main/default/objects/Account/fields/Preferred_Language__c.field-meta.xml
<CustomField>
<fullName>Preferred_Language__c</fullName>
<label>Preferred Language</label>
<type>Picklist</type>
<valueSet>
<valueSetDefinition>
<value>
<fullName>English</fullName>
<default>true</default>
<label>English</label>
</value>
<value>
<fullName>Hindi</fullName>
</value>
<value>
<fullName>Marathi</fullName>
</value>
<value>
<fullName>Tamil</fullName>
</value>
<value>
<fullName>Telugu</fullName>
</value>
<value>
<fullName>Kannada</fullName>
</value>
<value>
<fullName>Bengali</fullName>
</value>
<value>
<fullName>Gujarati</fullName>
</value>
<value>
<fullName>Malayalam</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>