force-app/main/default/objects/Account/fields/Primary_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Primary_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountPrimaryCoordinator</relationshipName>
    <type>Lookup</type>
</CustomField>