force-app/main/default/objects/Account/fields/Referred_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Referred_Enrollments__c</fullName>
    <label>Enrollments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>