force-app/main/default/objects/Account/fields/Referred_Leads__c.field-meta.xml
<CustomField>
    <fullName>Referred_Leads__c</fullName>
    <label>Referred Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>